# mycodebase

./: .gitignore  CLAUDE.md  DEBT.md  README.md  pyproject.toml  requirements.txt
config/: settings.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  ws.ts
frontend/src/components/Blotter/: BlotterGrid.tsx  ColumnToggle.tsx
frontend/src/components/Layout/: AppShell.tsx  Header.tsx
frontend/src/components/Pricer/: AddOrderButton.tsx  BrokerQuote.tsx  OrderHeader.tsx  OrderInput.tsx  PricerToolbar.tsx  PricingGrid.tsx  StructureBuilder.tsx
frontend/src/components/Shared/: AlertBanner.tsx  HealthBadge.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/stores/: blotterStore.ts  connectionStore.ts  pricerStore.ts
frontend/src/theme/: aggrid.ts  tokens.ts
frontend/src/types/: index.ts
src/api/: dependencies.py  main.py  schemas.py  ws.py
src/api/routes/: orders.py  parse.py  price.py  source.py
src/options_pricer/: __init__.py  bloomberg.py  models.py  order_store.py  parser.py  pricer.py  structure_pricer.py
src/options_pricer/dashboard/: app.py  blotter_app.py  callbacks.py  layouts.py
tests/: test_models.py  test_order_store.py  test_parser.py  test_pricer.py
